--- a/src/components/StageForm/StageForm.css
+++ b/src/components/StageForm/StageForm.css
@@ -1,8 +1,3 @@
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-}
 label {
   text-align: left;
   font-size: 0.875rem;
@@ -12,46 +7,88 @@ input[type="text"] {
   margin: 0.25rem 0;
   border: 1px solid #eee;
   padding: 0.25rem 0.5rem;
+  border-radius: 2px;
+}
+
+input[type="text"]:disabled {
+  color: white;
 }
 
 input[type="number"] {
   margin: 0.25rem 0;
   border: 1px solid #eee;
   padding: 0.25rem 0.5rem;
+  border-radius: 2px;
+}
+
+input[type="number"]:disabled {
+  color: white;
 }
 
 select {
   margin: 0.25rem 0;
   border: 1px solid #eee;
   padding: 0.25rem 0.5rem;
+  border-radius: 2px;
 }
 
-.form-item {
-  flex-basis: calc(50% - 1rem);
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+select:disabled {
+  color: white;
 }
 
 form {
-  margin: auto;
+  margin: 0;
   min-width: 350px;
-  max-width: 400px;
+  max-width: 450px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   align-content: space-between;
-  gap: 1rem;
+  gap: 0.75rem;
 }
 
-button {
+.form-item {
+  flex-basis: calc(50% - 0.5rem);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  border-radius: 2px;
+}
+
+.button-group {
+  padding-top: 0.5rem;
+  display: flex;
+  flex-basis: 100%;
+  justify-content: space-between;
+}
+
+.form-submit {
   background-color: #318ce7;
   color: white;
   font-weight: bold;
-  font-size: 1rem;
+  font-size: 0.875rem;
   padding: 0.5rem 2rem;
   border: none;
   border-radius: 0.5rem;
+  transition: all 0.3s;
+}
+
+.form-submit:hover {
+  background-color: #0000cd;
+}
+
+.form-submit:active {
+  background-color: #0000cd;
+  transform: scale(0.9);
+}
+
+.form-submit:disabled {
+  background-color: #abb0b8;
+  color: #6f7378;
+}
+
+.form-submit:disabled:active {
+  transform: scale(1);
 }
