--- a/src/components/StagesCarousel/StagesCarousel.css
+++ b/src/components/StagesCarousel/StagesCarousel.css
@@ -1,10 +1,11 @@
 .carousel-container {
   width: max-content;
+  background-color: white;
+  box-shadow: rgba(17, 21, 26, 0.25) 0px 0.35rem 0.65rem 0px;
   display: flex;
   flex-direction: column;
   margin: auto;
-  border: solid 2px white;
-  border-radius: 2px;
+  border-radius: 8px;
   padding: 2rem;
 }
 
@@ -29,8 +30,8 @@
 
 button.carousel-button {
   display: flex;
-  font-size: 0.875rem;
   font-weight: bold;
+  font-size: 0.875rem;
   background-color: #8f9779;
   color: white;
   flex-direction: row;
